fixed mobile layout bug

--- a/src/css/site.less
+++ b/src/css/site.less
@@ -576,7 +576,7 @@ h2 {
     }
 
     .box-seperator h1 {
-        font-size: 20px;
+        font-size: 20px !important;
         line-height: 3;
     }
 
